fix: Move worldbuilding default templates to frontend so as to work in offline mode
